--- a/app/src/main/res/layout/custom_capture_activity.xml
+++ b/app/src/main/res/layout/custom_capture_activity.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -8,28 +7,33 @@
     <SurfaceView
         android:id="@+id/surfaceView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent" />
+
     <com.yonghui.zxing.ViewfinderView
         android:id="@+id/viewfinderView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        app:cornerColor="@color/colorPrimary"
+        app:frameColor="@color/colorPrimary"
+        app:frameHeight="300dp"
+        app:frameWidth="300dp"
         app:labelText="@string/tips_scan_code"
+        app:labelTextLocation="bottom"
         app:labelTextSize="@dimen/size_14sp"
         app:laserColor="@color/colorAccent"
-        app:frameColor="@color/colorPrimary"
-        app:cornerColor="@color/colorPrimary"
-        app:resultPointColor="@color/colorAccent"
-        app:labelTextLocation="bottom"
-        app:laserStyle="grid"/>
+        app:laserStyle="grid"
+        app:resultPointColor="@color/colorAccent" />
+
     <ImageView
         android:id="@+id/ivTorch"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="160dp"
         android:src="@drawable/flash_selected_selector"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginTop="160dp" />
-    <include layout="@layout/toolbar_capture"/>
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <include layout="@layout/toolbar_capture" />
 </android.support.constraint.ConstraintLayout>
